1.1.0 - Released 00-Month-0000
--------------------------------
- Add support for other operating systems.
- Switch to autoconf from our handcrafted genconfig.sh.
- Add configuration option for UUID.
- Add configuration option to specify the user to run as.

1.0.25 - Released 13-July-2012
--------------------------------
- Fix a couple crash bugs on malformed WAV files.
- Forcibly tweak the model number for Xbox360 clients, or they might ignore us.
- Enable all network interfaces by default if none were specified.
- Add flag to force downscaled thumbnails rather than using embedded ones.
- Add DirecTV client detection, and fix image resolution issue.
- Add support for the latest ffmpeg/libav library versions.
- Fix a potential crash on requests for a resize of a non-existent image.
- Make DeviceID checking more permissive for Sagem Radio.

1.0.24 - Released 14-Feb-2012
--------------------------------
- Fix playlist browsing with no SortOrder specified.
- Fix inotify detection of caption file removal.
- Handle an empty DeviceID from Zyxel media player SOAP request.
- Fix false positives in playlist caching optimization when we have duplicate file names in different directories.
- Trim the camera model name extracted from EXIF tags.
- Add support for user-configurable log level settings.
- Add DLNA.ORG_FLAGS support.

1.0.23 - Released 23-Jan-2012
--------------------------------
- Enable the subtitle menu on some Samsung TV's.
- Add subtitle support for Panasonic TV's.
- Add workarounds for LifeTab tablets' bad behavior.
- Speed up playlist parsing.
- Make metadata-based virtual containers case insensitive.
- Add folder art support (very few clients support this though).
- Improve trimming of quotation marks.
- Fix SRT caption support with the latest Samsung Series D firmware.
- Fix subtitles on LG TV's for items whose titles don't have a dot in them.
- Add support for the av:mediaClass tag, so some Sony devices can filter items by media type.