@@ -8,12 +8,13 @@ port=8200
 #user=jmaggard
 
 # set this to the directory you want scanned.
-# * if have multiple directories, you can have multiple media_dir= lines
-# * if you want to restrict a media_dir to a specific content type, you
-#   can prepend the type, followed by a comma, to the directory:
+# * if you want multiple directories, you can have multiple media_dir= lines
+# * if you want to restrict a media_dir to specific content types, you
+#   can prepend the types, followed by a comma, to the directory:
 #   + "A" for audio  (eg. media_dir=A,/home/jmaggard/Music)
 #   + "V" for video  (eg. media_dir=V,/home/jmaggard/Videos)
 #   + "P" for images (eg. media_dir=P,/home/jmaggard/Pictures)
+#   + "PV" for pictures and video (eg. media_dir=AV,/home/jmaggard/digital_camera)
 media_dir=/opt
 
 # set this if you want to customize the name that shows up on your clients
